--- a/index.css
+++ b/index.css
@@ -151,6 +151,7 @@
     left: 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    
   }
   
   .panel {
@@ -164,17 +165,11 @@
   
   .left-panel {
     pointer-events: all;
-    padding: 3rem 17% 2rem 12%;
+    padding: 3rem 17% 2rem 12%;    
   }
-  
-  .right-panel {
-    pointer-events: none;
-    padding: 3rem 12% 2rem 17%;
-  }
+
   
   .panel .content {
-    /* color: var(--panel-color); */
-    transition: 0.9s 0.6s ease-in-out;
     color: #fff;
   }
   
@@ -199,21 +194,11 @@
     font-size: 0.8rem;
   }
   
-  .image {
-    width: 90%;
-    margin-top: 10px;
-    transition: 1.1s 0.4s ease-in-out;
-  }
-  
-  .right-panel .content,
-  .right-panel .image {
-    transform: translateX(800px);
-  }
-  
   /* ANIMATION */
   
   .container.sign-up-mode:before {
     transform: translate(100%, -50%);
+    transition: 10s;
     right: 52%;
   }
   
@@ -222,17 +207,8 @@
     transform: translateX(-800px);
   }
   
-  .container.sign-up-mode .right-panel .content,
-  .container.sign-up-mode .right-panel .image {
-    transform: translateX(0px);
-  }
-  
   .container.sign-up-mode .left-panel {
     pointer-events: none;
-  }
-  
-  .container.sign-up-mode .right-panel {
-    pointer-events: all;
   }
   
   .container.sign-up-mode .signin-signup {
@@ -278,6 +254,7 @@
     .panels-container {
       grid-template-columns: 1fr;
       grid-template-rows: 1fr 2fr 1fr;
+     
     }
   
     .panel {
@@ -308,15 +285,6 @@
     }
     .left-panel {
       grid-row: 1 / 2;
-    }
-  
-    .right-panel {
-      grid-row: 3 / 4;
-    }
-  
-    .right-panel .content,
-    .right-panel .image {
-      transform: translateY(300px);
     }
   
     .container.sign-up-mode:before {
@@ -359,13 +327,6 @@
       left: 50%;
     }
   
-    .field-icon {
-      float: right;
-      margin-left: 300px;
-      margin-top: -55px;
-      position: relative;
-      z-index: 1;
-    }
   }
   
 .social-container a {
@@ -400,4 +361,34 @@
 .fa-linkedin {
     background: #007bb5;
     color: white;
+}
+#box{
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  z-index: 7;
+  display: none;
+  transition: 5s;
+}
+
+#success{
+  background-image: url('https://cdn.dribbble.com/users/2185205/screenshots/7886140/media/90211520c82920dcaf6aea7604aeb029.gif');
+  background-position: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 300px;
+  width: 300px;
+  background-color: tomato;
+  z-index: 8;
+  margin: auto;
+  border-radius: 20px;
+}
+#success h1{
+  position: absolute;
+  margin: 30px 60px;
+}
+#success h3{
+  position: absolute;
+  margin: 230px 40px;
 }
