--- a/style.css
+++ b/style.css
@@ -24,9 +24,10 @@ body {
 }
 
 .navbar-logo a img {
-  width: 5rem;
-  height: 45px;
+  width: 12rem;
+  height: 58px;
   padding-left: 5rem;
+  z-index: 10;
 }
 .search-btn{
   display: flex;
@@ -460,7 +461,7 @@ background-color: #fff;
   width: 50px;
   border-radius:50% ;
   margin-right: 10px;
-}
+}post-link
 .post-input textarea{
   width: 100%;
   border: 0;
@@ -491,7 +492,6 @@ background-color: #fff;
 .post-links li i{
   font-size: 15px;
   color: crimson;
-  /* color: #045be6; */
   margin-right: 5px;
 }
 .post-links li:last-child{
@@ -651,7 +651,7 @@ color:crimson;
   }
   #dell{
     position:relative;
-    left:508px;
+    left:98%;
     bottom:25px;
     
   }
