--- a/style.css
+++ b/style.css
@@ -677,9 +677,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Set a style for all buttons */
 button {
-  background-color: #04AA6D;
+  background-color: #f01c44;
   color: white;
-  padding: 14px 20px;
+  padding: 12px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
