--- a/style.css
+++ b/style.css
@@ -569,6 +569,9 @@ margin-bottom: -2px;
 .message{
   overflow: hidden;
 }
+.message-image{
+  height: 350px;
+}
 .manee{
   display: none;
 }
@@ -677,9 +680,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Set a style for all buttons */
 button {
-  background-color: #f01c44;
+  background-color: #04AA6D;
   color: white;
-  padding: 12px;
+  padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
